// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LockPinCodeSetup /> should render pin code box 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  tertiary={true}
>
  <View
    style={
      Object {
        "marginBottom": 70,
        "marginTop": 60,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 19,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "800",
          },
          Object {
            "textAlign": "center",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "letterSpacing": 0.5,
            "lineHeight": 28,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      Set up a passcode
    </Text>
  </View>
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={Object {}}
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        row={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="pin-code-digit-0-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-0-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-1-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-1-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-2-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-2-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-3-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-3-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-4-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-4-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-5-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-5-touchable"
        />
      </View>
      <TextInput
        accessibilityLabel="pin-code-input-box"
        accessible={true}
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        enablesReturnKeyAutomatically={false}
        keyboardAppearance="dark"
        keyboardType="number-pad"
        maxLength={6}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "height": 0,
            "position": "absolute",
            "right": -999,
            "width": 0,
          }
        }
        testID="pin-code-input-box"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<LockPinCodeSetup /> should show "pass code mismatch ..." message and reset to initial state after passcode mismatch 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  tertiary={true}
>
  <View
    style={
      Object {
        "marginBottom": 70,
        "marginTop": 60,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 19,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "800",
          },
          Object {
            "textAlign": "center",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "letterSpacing": 0.5,
            "lineHeight": 28,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      Your passcodes do not match, please start over.
    </Text>
  </View>
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={Object {}}
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        row={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="pin-code-digit-0-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-0-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-1-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-1-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-2-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-2-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-3-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-3-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-4-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-4-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-5-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-5-touchable"
        />
      </View>
      <TextInput
        accessibilityLabel="pin-code-input-box"
        accessible={true}
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        enablesReturnKeyAutomatically={false}
        keyboardAppearance="dark"
        keyboardType="number-pad"
        maxLength={6}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "height": 0,
            "position": "absolute",
            "right": -999,
            "width": 0,
          }
        }
        testID="pin-code-input-box"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`<LockPinCodeSetup /> should show re enter pass code after first entry 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
  tertiary={true}
>
  <View
    style={
      Object {
        "marginBottom": 70,
        "marginTop": 60,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 19,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "800",
          },
          Object {
            "textAlign": "center",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "letterSpacing": 0.5,
            "lineHeight": 28,
            "paddingHorizontal": 10,
          },
        ]
      }
    >
      Re-enter passcode
    </Text>
  </View>
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={Object {}}
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 20,
            "left": 20,
            "right": 20,
            "top": 20,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        row={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="pin-code-digit-0-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-0-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-1-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-1-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-2-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-2-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-3-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-3-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-4-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-4-touchable"
        />
        <View
          accessibilityLabel="pin-code-digit-5-touchable"
          accessible={false}
          center={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#777777",
              "borderBottomWidth": 5,
              "height": 66,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "width": 38,
            }
          }
          testID="pin-code-digit-5-touchable"
        />
      </View>
      <TextInput
        accessibilityLabel="pin-code-input-box"
        accessible={true}
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        enablesReturnKeyAutomatically={false}
        keyboardAppearance="dark"
        keyboardType="number-pad"
        maxLength={6}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "height": 0,
            "position": "absolute",
            "right": -999,
            "width": 0,
          }
        }
        testID="pin-code-input-box"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
</View>
`;
